test : AutoParams를 이용한 Author 로직 단위/통합 테스트 작성

--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    //swagger
+    // Swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
+
+    // Autoparams. ref -> https://github.com/AutoParams/AutoParams
+    testImplementation 'io.github.autoparams:autoparams:9.0.0'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
